# audit-da-comparision

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: auditor_regime.yaml  cfs_regime_robustness.yaml  cfs_shifting_validation.yaml  next_diagnostics.yaml  ols_diagnostics.yaml  predictive_validity.yaml  results_completion.yaml  signal_gate.yaml  smoke.yaml  supplemental_diagnostics.yaml
docs/: cfs_auditor_regime.md  cfs_deep_dive_protocol.md  cfs_exchange_covid_robustness.md  cfs_shifting_validation.md  cfs_shifting_validation.todo  final_results_contract_v2.md  final_results_contract_v4.md  method_contract_corrections.md  methodology.md  next_diagnostics.md  predictive_validity.md  results_completion.md  supplemental_diagnostics.md  tt200_time_contract.md
manuscript/: CHAPTER4_RESULTS_AUDIT.md  README.md  RERUN_MANIFEST.md
scripts/: 00_profile_input.py  01_build_panel.py  02_run_signal_gate.py  03_run_baselines.py  04_analyze_ols_baselines.py  05_audit_tails_and_ta.py  06_analyze_sign_transitions.py  07_run_directional_placebos.py  08_analyze_rolling_calibration.py  09_analyze_model_family_discordance.py  10_write_next_diagnostics_report.py  11_analyze_ta_decomposition.py  12_analyze_cfs_identity.py  13_analyze_component_placebos.py  14_analyze_cfo_tilt.py  15_analyze_cfs_deep_dive.py  16_write_cfs_deep_dive_report.py  17_analyze_cfs_uncertainty_bridge.py  18_inventory_cfs_items.py  19_validate_cfs_shifting_proxies.py  20_write_cfs_shifting_validation_report.py  21_complete_cfs_validation_gates.py  22_analyze_auditor_regime.py  (+25 more)
src/audit_da/: io.py  (+44 more)
(+55 files in other folders)
